minor update minor update minor fix reverted to previous versions of scriptaculous/prototype due to prototype's bug in clonePosition() select dates updated to make limits more sensible user form minor update catalog collapse all fix removed "collapse catalog only for lessons" option Small changes Small css changes catalog minor updates removed number of lessons from courses list rearranged personal messages page removed language from lessons list removed non-functional "active lessons" statistic minor skill reports fix Small css change messages update
git-svn-id: https://efrontlearning.svn.sourceforge.net/svnroot/efrontlearning@451 b0e902ce-d33f-0410-b758-e8627170a121

--- a/community/www/themes/blue_html5/css/css_global.css
+++ b/community/www/themes/blue_html5/css/css_global.css
@@ -1389,8 +1389,8 @@ div.proto_graph{background-color:white;height:500px;}
 
 
 /*Various classes*/
-.horizontalSeparator{border-bottom:1px solid #888888}
-.horizontalSeparatorAbove{border-top:1px solid #555555;}
+.horizontalSeparator{border-bottom:1px solid #888}
+.horizontalSeparatorAbove{border-top:1px solid #888;}
 .inactiveElement{color:#cccccc!important;}
 .inactiveImage, .inactiveImage img{opacity:0.2;filter:alpha(opacity=20);}
 input.inactiveElement{background-color:#f9f9f9;border-color:#f9f9f9;}
